deployments/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daily-quote-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daily-quote-go
  template:
    metadata:
      labels:
        app: daily-quote-go
    spec:
      containers:
      - name: daily-quote-go
        image: dummy:latest
        ports:
        - containerPort: 8080
