deployments/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: daily-quote-go
spec:
  selector:
    app: daily-quote-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
